; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_dell-laptop.c_dell_update_rfkill.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_dell-laptop.c_dell_update_rfkill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@wifi_rfkill = common dso_local global i64 0, align 8
@bluetooth_rfkill = common dso_local global i64 0, align 8
@wwan_rfkill = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @dell_update_rfkill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dell_update_rfkill(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %3 = load i64, i64* @wifi_rfkill, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i64, i64* @wifi_rfkill, align 8
  %7 = call i32 @dell_rfkill_query(i64 %6, i8* inttoptr (i64 1 to i8*))
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i64, i64* @bluetooth_rfkill, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i64, i64* @bluetooth_rfkill, align 8
  %13 = call i32 @dell_rfkill_query(i64 %12, i8* inttoptr (i64 2 to i8*))
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i64, i64* @wwan_rfkill, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i64, i64* @wwan_rfkill, align 8
  %19 = call i32 @dell_rfkill_query(i64 %18, i8* inttoptr (i64 3 to i8*))
  br label %20

20:                                               ; preds = %17, %14
  ret void
}

declare dso_local i32 @dell_rfkill_query(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
